[package]
name = "chapt_two_workthrough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 tokio = { version = "1.2", features = ["full"] }
 hyper = "1.3.1"
 tower = "0.4.13"
 axum = "0.7.2" 
 uuid = { version = "1.8.0", features = ["serde", "v4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0" 